fixing header alignment

--- a/src/comp/shared/Header.module.css
+++ b/src/comp/shared/Header.module.css
@@ -94,7 +94,9 @@
     .header {
         padding: 0 20px;
     }
-
+    .header .secCont {
+        justify-content: space-between;
+    }
     .header .secCont .nav {
         display: none;
     }
